--- a/_site.yml
+++ b/_site.yml
@@ -6,4 +6,6 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - text: "test jscript"
+      href: test.md
 output_dir: "."
