--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: R. Tyler McLaughlin, PhD
+description: Navigating the interface between molecular systems biology and machine learning for biomedical innovation.
