--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-minimal
 title: R. Tyler McLaughlin, PhD
 description: Navigating the interface between molecular systems biology and machine learning for biomedical innovation.
+linkedin: https://www.linkedin.com/in/r-tyler-mclaughlin-phd
+github_username: TylerMcLaughlin
+
+
+markdown: kramdown
