--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: R. Tyler McLaughlin, PhD
-description: Navigating the interface between molecular systems biology and machine learning for biomedical innovation.
+description: Seeking industry roles at the interface between molecular systems biology and machine learning for biomedical innovation.
 linkedin: https://www.linkedin.com/in/r-tyler-mclaughlin-phd
 github_username: TylerMcLaughlin
 
