--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: R. Tyler McLaughlin, PhD
-description: Seeking data scientist positions or industry roles at the interface between molecular systems biology and machine learning for biomedical innovation.
+description: Postdoctoral fellow at AbbVie biopharma, innovating at the interface of molecular systems biology, genomics, and machine learning.
 linkedin: https://www.linkedin.com/in/r-tyler-mclaughlin-phd
 github_username: TylerMcLaughlin
 
